hero section alignment and btn fix

--- a/style.css
+++ b/style.css
@@ -1,33 +1,47 @@
-@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    font-family: "Azeret Mono", monospace;
+@import url("https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Azeret Mono", monospace;
+}
+.btn {
+  margin-top: 24px;
+  color: rgb(255, 255, 255);
+  font-family: Azeret Mono;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 23px;
+  letter-spacing: 0%;
+  text-align: center;
+  padding: 21px 24px 21px 24px;
+  border: none;
+  border-radius: 8px;
+  background: rgb(13, 19, 33);
 }
 .heroSection {
-    height: 740px;
-    background-image: url('Hero-bg.png');
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 930px;
+  background-image: url("Hero-bg.png");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .heroContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .heroContainer .title {
-    font-size: 36px;
-    margin: 20px 0;
+  font-size: 36px;
+  margin: 20px 0;
 }
 
 .heroContainer .subtitle {
-    font-size: 20px;
-    text-align: center;
+  font-size: 20px;
+  text-align: center;
 }
